--- a/frontend/src/components/WizardCard.scss
+++ b/frontend/src/components/WizardCard.scss
@@ -33,6 +33,7 @@ height: 580px;
     position: relative;
     transition: transform 0.6s;
     transform-style: preserve-3d;
+    transform: rotateY(180deg);
   }
 
   &-front, &-back {
@@ -135,21 +136,23 @@ height: 580px;
 }
 
 .wizardGender {
-  font-family: 'Harry Potter', sans-serif;
-  // text-transform: lowercase;
-  margin: 6px auto;
+  font-family: "Times New Roman", Garamond, serif;
+  font-size: 24px;
   position: absolute;
-  top: -62px;
-  font-size: 14px;
-  transform: translate3d(-50%, 0, 0);
+ top: 150px;
   left: 50%;
-  color: $card-color;
+  transform: translateX(-50%);
+  color: gold;
 }
 
 .wizardAttributes {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+  font-family: "Times New Roman", Garamond, serif;
+  font-size: 28px;
+  position: absolute;
+  top: 190px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: gold;
 
   li {
     padding: 4px;
