--- a/frontend/src/components/WizardCard.scss
+++ b/frontend/src/components/WizardCard.scss
@@ -23,13 +23,15 @@ $card-color: #393a75;
   height: 350px;
   display: block;
   margin: 8px;
-  transition: transform 0.6s;
+  transition: all 0.6s;
   transform: scale(1) translateY(0);
   z-index: 1;
+  margin-top: 0;
   position: relative;
 
   &.card-flipped {
-    transform: scale(1.5) translateY(-15%);
+    transform: scale(1.3) translateY(-10%);
+    margin-top: 85px;
     z-index: 10;
 
     .card-inner {
